--- a/toxic_comments.ipynb
+++ b/toxic_comments.ipynb
@@ -6,7 +6,7 @@
       "name": "toxic_comments.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM5+4NoN/U+Z5QRTzFwxeFH",
+      "authorship_tag": "ABX9TyNvryQpqQNOAAC0llzVOcH0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,6 +89,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ErC0nbuf4LUb",
+        "colab_type": "text"
+      },
+      "source": [
+        "Load datasets"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "2dP5MjdW9_kB",
@@ -104,132 +114,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ddunqu5OGQiA",
-        "colab_type": "code",
-        "outputId": "26071415-d1df-4d54-d99e-8a4e6978b847",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 206
-        }
-      },
-      "source": [
-        "test_set.head()"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>id</th>\n",
-              "      <th>comment_text</th>\n",
-              "      <th>toxic</th>\n",
-              "      <th>severe_toxic</th>\n",
-              "      <th>obscene</th>\n",
-              "      <th>threat</th>\n",
-              "      <th>insult</th>\n",
-              "      <th>identity_hate</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>0001ea8717f6de06</td>\n",
-              "      <td>Thank you for understanding. I think very high...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>000247e83dcc1211</td>\n",
-              "      <td>:Dear god this site is horrible.</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>0002f87b16116a7f</td>\n",
-              "      <td>\"::: Somebody will invariably try to add Relig...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>0003e1cccfd5a40a</td>\n",
-              "      <td>\" \\n\\n It says it right there that it IS a typ...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>00059ace3e3e9a53</td>\n",
-              "      <td>\" \\n\\n == Before adding a new product to the l...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                  id  ... identity_hate\n",
-              "5   0001ea8717f6de06  ...             0\n",
-              "7   000247e83dcc1211  ...             0\n",
-              "11  0002f87b16116a7f  ...             0\n",
-              "13  0003e1cccfd5a40a  ...             0\n",
-              "14  00059ace3e3e9a53  ...             0\n",
-              "\n",
-              "[5 rows x 8 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -1208,14 +1092,185 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VJ-pgyOsz3oB",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Remove stopwords"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "XO9ixQHZWOhy",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "79f98b67-7f10-4511-be52-a6fa1c359662"
+      },
+      "source": [
+        "import nltk\n",
+        "nltk.download('stopwords')\n",
+        "stopwords = nltk.corpus.stopwords.words('english')"
+      ],
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Mpan1hxuzMpo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 310
+        },
+        "outputId": "2c158778-3656-4ea7-cf95-429e0afae45b"
+      },
+      "source": [
+        "train.head()"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>comment_text</th>\n",
+              "      <th>toxic</th>\n",
+              "      <th>severe_toxic</th>\n",
+              "      <th>obscene</th>\n",
+              "      <th>threat</th>\n",
+              "      <th>insult</th>\n",
+              "      <th>identity_hate</th>\n",
+              "      <th>clean_comments</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0000997932d777bf</td>\n",
+              "      <td>Explanation\\nWhy the edits made under my usern...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Explanation Why edits made username Hardcore M...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>000103f0d9cfb60f</td>\n",
+              "      <td>D'aww! He matches this background colour I'm s...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>D'aww! He matches background colour I'm seemin...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>000113f07ec002fd</td>\n",
+              "      <td>Hey man, I'm really not trying to edit war. It...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Hey man, I'm really trying edit war. It's guy ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0001b41b1c6bb37e</td>\n",
+              "      <td>\"\\nMore\\nI can't make any real suggestions on ...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>\" More I can't make real suggestions improveme...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0001d958c54c6e35</td>\n",
+              "      <td>You, sir, are my hero. Any chance you remember...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>You, sir, hero. Any chance remember page that'...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                 id  ...                                     clean_comments\n",
+              "0  0000997932d777bf  ...  Explanation Why edits made username Hardcore M...\n",
+              "1  000103f0d9cfb60f  ...  D'aww! He matches background colour I'm seemin...\n",
+              "2  000113f07ec002fd  ...  Hey man, I'm really trying edit war. It's guy ...\n",
+              "3  0001b41b1c6bb37e  ...  \" More I can't make real suggestions improveme...\n",
+              "4  0001d958c54c6e35  ...  You, sir, hero. Any chance remember page that'...\n",
+              "\n",
+              "[5 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KJAFQFKTwiLe",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "train['clean_comments'] = train['comment_text'].apply(lambda x: ' '.join([word for word in x.split() if word not in (stopwords)]))\n",
+        "test_set['clean_comments'] = test_set['comment_text'].apply(lambda x: ' '.join([word for word in x.split() if word not in (stopwords)]))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1278,12 +1333,11 @@
         "colab": {}
       },
       "source": [
-        "\n",
         "list_classes = [\"toxic\", \"severe_toxic\", \"obscene\", \"threat\", \"insult\", \"identity_hate\"]\n",
         "y_train = train[list_classes].values\n",
         "y_test = test_set[list_classes].values\n",
-        "list_sentences_train = train[\"comment_text\"]\n",
-        "list_sentences_test = test_set[\"comment_text\"]"
+        "list_sentences_train = train[\"clean_comments\"]\n",
+        "list_sentences_test = test_set[\"clean_comments\"]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1317,12 +1371,12 @@
         "import pickle\n",
         "\n",
         "# saving\n",
-        "with open('tokenizer.pickle', 'wb') as handle:\n",
+        "with open('drive/My Drive/Toxic_Comments/tokenizer.pickle', 'wb') as handle:\n",
         "    pickle.dump(tokenizer, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
         "\n",
         "# loading\n",
-        "with open('tokenizer.pickle', 'rb') as handle:\n",
-        "    tokenizer = pickle.load(handle)"
+        "# with open('tokenizer.pickle', 'rb') as handle:\n",
+        "#     tokenizer = pickle.load(handle)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1361,7 +1415,7 @@
       "metadata": {
         "id": "8TH7QS4RZ6j5",
         "colab_type": "code",
-        "outputId": "b0ae07a4-fcc3-433b-82bb-09adff7fd7ee",
+        "outputId": "061938f3-b75f-4d54-8f5b-40c5ea91af6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 453
@@ -1384,30 +1438,30 @@
         "              metrics=['accuracy'])\n",
         "model.summary()"
       ],
-      "execution_count": 80,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_7\"\n",
+            "Model: \"sequential_8\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "embedding_8 (Embedding)      (None, 200, 128)          2560000   \n",
+            "embedding_9 (Embedding)      (None, 200, 128)          2560000   \n",
             "_________________________________________________________________\n",
-            "bidirectional_9 (Bidirection (None, 200, 128)          74112     \n",
+            "bidirectional_11 (Bidirectio (None, 200, 128)          74112     \n",
             "_________________________________________________________________\n",
-            "dropout_10 (Dropout)         (None, 200, 128)          0         \n",
+            "dropout_12 (Dropout)         (None, 200, 128)          0         \n",
             "_________________________________________________________________\n",
-            "bidirectional_10 (Bidirectio (None, 200, 128)          98816     \n",
+            "bidirectional_12 (Bidirectio (None, 200, 128)          98816     \n",
             "_________________________________________________________________\n",
-            "global_average_pooling1d_8 ( (None, 128)               0         \n",
+            "global_average_pooling1d_9 ( (None, 128)               0         \n",
             "_________________________________________________________________\n",
-            "dense_14 (Dense)             (None, 64)                8256      \n",
+            "dense_16 (Dense)             (None, 64)                8256      \n",
             "_________________________________________________________________\n",
-            "dropout_11 (Dropout)         (None, 64)                0         \n",
+            "dropout_13 (Dropout)         (None, 64)                0         \n",
             "_________________________________________________________________\n",
-            "dense_15 (Dense)             (None, 6)                 390       \n",
+            "dense_17 (Dense)             (None, 6)                 390       \n",
             "=================================================================\n",
             "Total params: 2,741,574\n",
             "Trainable params: 2,741,574\n",
@@ -1423,7 +1477,7 @@
       "metadata": {
         "id": "Ql2tP53l-joM",
         "colab_type": "code",
-        "outputId": "821f55ce-d9c9-4cc3-c838-7901f53efd14",
+        "outputId": "83948c52-4d3a-47b2-ba5a-ea70727cd475",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 128
@@ -1439,16 +1493,16 @@
         "                    validation_split=0.1,\n",
         "                    shuffle=True)"
       ],
-      "execution_count": 82,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train on 143613 samples, validate on 15958 samples\n",
             "Epoch 1/2\n",
-            "143613/143613 [==============================] - 194s 1ms/sample - loss: 0.2271 - acc: 0.9634 - val_loss: 0.2264 - val_acc: 0.9627\n",
+            "143613/143613 [==============================] - 192s 1ms/sample - loss: 0.2306 - acc: 0.9634 - val_loss: 0.2280 - val_acc: 0.9627\n",
             "Epoch 2/2\n",
-            "143613/143613 [==============================] - 192s 1ms/sample - loss: 0.2253 - acc: 0.9634 - val_loss: 0.2250 - val_acc: 0.9626\n"
+            "143613/143613 [==============================] - 185s 1ms/sample - loss: 0.2262 - acc: 0.9634 - val_loss: 0.2259 - val_acc: 0.9627\n"
           ],
           "name": "stdout"
         }
@@ -1459,7 +1513,7 @@
       "metadata": {
         "id": "m74buOBTAVdK",
         "colab_type": "code",
-        "outputId": "cbef5d05-e16c-4b5a-b833-e10b2463d242",
+        "outputId": "b74e9d1d-de0e-41fa-80a1-fff0c556e895",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1471,12 +1525,12 @@
         "                       batch_size = 1024,\n",
         "                       verbose = 1)"
       ],
-      "execution_count": 84,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "63978/63978 [==============================] - 18s 286us/sample - loss: 0.2269 - acc: 0.9617\n"
+            "63978/63978 [==============================] - 17s 266us/sample - loss: 0.2272 - acc: 0.9622\n"
           ],
           "name": "stdout"
         }
@@ -1541,7 +1595,7 @@
         "colab": {}
       },
       "source": [
-        "save_model(model, \"lstm_1st\")"
+        "save_model(model, \"gru_lstm_9622\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1582,14 +1636,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "d7beb480-ac3b-457f-ac73-137ce9aa6287"
+        "outputId": "41c77e37-ec6d-4ebc-aeca-40ffff0d01a7"
       },
       "source": [
         "e = model.layers[0]\n",
         "weights = e.get_weights()[0]\n",
         "print(weights.shape)"
       ],
-      "execution_count": 87,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
