Update model and embeddings

--- a/toxic_comments.ipynb
+++ b/toxic_comments.ipynb
@@ -6,7 +6,7 @@
       "name": "toxic_comments.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNR7O6D4QJ0N+hklxQlGDgp",
+      "authorship_tag": "ABX9TyOk6KKt0EBUkRk4dsb5Th2N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1303,10 +1303,11 @@
         "colab": {}
       },
       "source": [
-        "from tensorflow.keras.layers import Dense, Input, LSTM, GRU, Embedding, Dropout, Activation, Bidirectional, GlobalAveragePooling1D, GlobalMaxPooling1D, Conv1D, MaxPooling1D\n",
+        "from tensorflow.keras.layers import Dense, Flatten, LSTM, GRU, Embedding, Dropout, Activation, Bidirectional, GlobalAveragePooling1D, GlobalMaxPooling1D, Conv1D, MaxPooling1D\n",
         "from tensorflow.keras.models import Sequential, Model\n",
         "from tensorflow.keras.optimizers import Adam\n",
         "from tensorflow.keras.models import model_from_json\n",
+        "from sklearn.metrics import roc_auc_score\n",
         "\n",
         "def save_model(model,name):\n",
         "    json_string = model.to_json()\n",
@@ -1411,7 +1412,7 @@
         "colab_type": "text"
       },
       "source": [
-        "We experimeted with many architectures, however the one below gave us the best results. \n",
+        "We experimeted with many architectures, however the one below gave us the best results. It is worth mentioning that simple CNN had the best results on training set, but did poorly on the test set.\n",
         "\n",
         "Our architecture consists of: \n",
         "\n",
@@ -1437,6 +1438,7 @@
       },
       "source": [
         "model = Sequential([\n",
+        "                    \n",
         "    Embedding(vocab_size+1, embedding_dim, input_length=max_length, weights=[embeddings_matrix], trainable=False),\n",
         "    Dropout(0.1),\n",
         "\n",
@@ -1613,6 +1615,54 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1dsX6Wp0o1tG",
+        "colab_type": "text"
+      },
+      "source": [
+        "In the Kaggle challenge ROC AUC score is used so we can also compute that."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kn9jRWGaoXUr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "y_eval = model.predict(X_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_cJQAYV1oQ-8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ac72d52e-721c-4592-98b4-290685c2abf7"
+      },
+      "source": [
+        "print(f\"Achieved ROC AUC score: {round(roc_auc_score(y_test, y_eval),5)*100}%\")"
+      ],
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Achieved ROC AUC score: 96.953%\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "hfWSJ2-E-jvB",
@@ -1646,7 +1696,17 @@
         "\n",
         "To use it you will need to go to https://projector.tensorflow.org/ and load files from attachments. (vecs.tsv and meta.tsv)\n",
         "\n",
-        "Below we attach code to save embeddings if you would like to do so."
+        "After you upload the files you should see something like this:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QtyGjJ_atUsQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1s8Uak7l8KavLWdfqNoVwntNQNFofwlyv)\n"
       ]
     },
     {
