--- a/toxic_comments.ipynb
+++ b/toxic_comments.ipynb
@@ -6,7 +6,7 @@
       "name": "toxic_comments.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOk6KKt0EBUkRk4dsb5Th2N",
+      "authorship_tag": "ABX9TyOGSPWtb7MuAOlvo4t3/ieJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,9 +106,9 @@
         "colab": {}
       },
       "source": [
-        "train = pd.read_csv('drive/My Drive/Toxic_Comments/train.csv')\n",
-        "test = pd.read_csv('drive/My Drive/Toxic_Comments/test.csv')\n",
-        "test_labels = pd.read_csv('drive/My Drive/Toxic_Comments/test_labels.csv')\n",
+        "train = pd.read_csv('drive/My Drive/Toxic_Comments/data/train.csv')\n",
+        "test = pd.read_csv('drive/My Drive/Toxic_Comments/data/test.csv')\n",
+        "test_labels = pd.read_csv('drive/My Drive/Toxic_Comments/data/test_labels.csv')\n",
         "test_set = pd.concat([test.reset_index(drop=True), test_labels.iloc[:,1:]], axis=1)\n",
         "test_set = test_set[test_set.toxic != -1]"
       ],
@@ -1250,10 +1250,10 @@
         "colab": {}
       },
       "source": [
-        "with open('drive/My Drive/Toxic_Comments/tokenizer_30000.pickle', 'wb') as handle:\n",
+        "with open('drive/My Drive/Toxic_Comments/objects/tokenizer_30000.pickle', 'wb') as handle:\n",
         "    pickle.dump(tokenizer, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
         "\n",
-        "# with open('tokenizer.pickle', 'rb') as handle:\n",
+        "# with open('drive/My Drive/Toxic_Comments/objects/tokenizer_30000.pickle', 'rb') as handle:\n",
         "#     tokenizer = pickle.load(handle)"
       ],
       "execution_count": 0,
@@ -1311,12 +1311,12 @@
         "\n",
         "def save_model(model,name):\n",
         "    json_string = model.to_json()\n",
-        "    open('drive/My Drive/Toxic_Comments/'+name+'_architecture.json', 'w').write(json_string)\n",
-        "    model.save_weights('drive/My Drive/Toxic_Comments/'+name+'_weights.h5')\n",
+        "    open('drive/My Drive/Toxic_Comments/model_files/'+name+'_architecture.json', 'w').write(json_string)\n",
+        "    model.save_weights('drive/My Drive/Toxic_Comments/model_files/'+name+'_weights.h5')\n",
         "    \n",
         "def load_model(name):\n",
-        "    model = model_from_json(open('drive/My Drive/Toxic_Comments/'+name+'_architecture.json').read())\n",
-        "    model.load_weights('drive/My Drive/Toxic_Comments/'+name +'_weights.h5')\n",
+        "    model = model_from_json(open('drive/My Drive/Toxic_Comments/model_files/'+name+'_architecture.json').read())\n",
+        "    model.load_weights('drive/My Drive/Toxic_Comments/model_files/'+name +'_weights.h5')\n",
         "    return(model)"
       ],
       "execution_count": 0,
