--- a/toxic_comments.ipynb
+++ b/toxic_comments.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "toxic_comments.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM91WrxuWCA1+cc5S0n8UDg",
+      "authorship_tag": "ABX9TyNhWEAWEbjrznvmz2kVokbj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,13 +45,13 @@
         "**Michał Thor and Bartłomiej Kowalczuk**\n",
         "\n",
         "In this project we analyzed toxic comment dataset from Kaggle challenge - https://www.kaggle.com/c/jigsaw-toxic-comment-classification-challenge/overview.\n",
-        "Our goal was to implement model that’s capable of detecting different types of of toxicity like threats, obscenity, insults, and identity-based in comments.\n",
+        "Our goal was to implement model that’s capable of detecting different types of of toxicity (like threats, obscenity, insults, and identity-based) in comments.\n",
         "\n",
         "Discussing things you care about can be difficult. The threat of abuse and harassment online means that many people stop expressing themselves and give up on seeking different opinions. Platforms struggle to effectively facilitate conversations, leading many communities to limit or completely shut down user comments. That leads to a need of system to classify such statements and automatically block them or clean them.\n",
         "\n",
         "In this notebook we will try to solve this problem.\n",
         "\n",
-        "**Disclaimer: the dataset contains text that may be considered profane, vulgar, or offensive.**"
+        "**Disclaimer: the dataset contains text that may be considered profane, vulgar, or highly offensive.**"
       ]
     },
     {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "B8zHDPVD-Fqi",
         "colab_type": "code",
-        "outputId": "0cb09ce6-96cf-4fc1-f75c-b8285e73f1ef",
+        "outputId": "78e674b3-b42b-4cc0-8687-4427359f7040",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 128
@@ -91,7 +91,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +135,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Followig cell allows you to install two packages that are not installed in Colab by default."
+        "Following cell allows you to install two packages that are not installed in Colab by default."
       ]
     },
     {
@@ -157,7 +157,7 @@
       "metadata": {
         "id": "d5Lm7WR89-iw",
         "colab_type": "code",
-        "outputId": "2e37105b-6236-4f48-d574-2df754f1e8a4",
+        "outputId": "f6f0d44d-b799-42b8-c95f-1a0d7a0c7c14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 90
@@ -188,7 +188,7 @@
         "from sklearn.decomposition import LatentDirichletAllocation as LDA\n",
         "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer"
       ],
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,16 +284,16 @@
       "metadata": {
         "id": "Zpy2uIcA-kj0",
         "colab_type": "code",
-        "outputId": "657a60b2-c45c-4516-8a13-db8885330ba3",
+        "outputId": "9059d46e-566b-4a30-d40c-3184a9f1f392",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
       "source": [
-        "train.iloc[:,2:].head()"
+        "train.iloc[1666:,2:].head()"
       ],
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -328,66 +328,66 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>0</th>\n",
+              "      <th>1666</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>Explanation Why edits made username Hardcore M...</td>\n",
+              "      <td>Mine dispeared, somebody wax ass.</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1</th>\n",
+              "      <th>1667</th>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
-              "      <td>D'aww! He matches background colour I'm seemin...</td>\n",
+              "      <td>\" Eventually, I foresee ACORN's self serving, ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>2</th>\n",
+              "      <th>1668</th>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
-              "      <td>Hey man, I'm really trying edit war. It's guy ...</td>\n",
+              "      <td>Good job... wackamole time</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3</th>\n",
+              "      <th>1669</th>\n",
+              "      <td>1</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>\" More I can't make real suggestions improveme...</td>\n",
+              "      <td>stop leaving stupid harping messages peopel ni...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4</th>\n",
+              "      <th>1670</th>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
-              "      <td>You, sir, hero. Any chance remember page that'...</td>\n",
+              "      <td>If doubt verifiable, read enough ED. It would ...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   toxic  ...                                     clean_comments\n",
-              "0      0  ...  Explanation Why edits made username Hardcore M...\n",
-              "1      0  ...  D'aww! He matches background colour I'm seemin...\n",
-              "2      0  ...  Hey man, I'm really trying edit war. It's guy ...\n",
-              "3      0  ...  \" More I can't make real suggestions improveme...\n",
-              "4      0  ...  You, sir, hero. Any chance remember page that'...\n",
+              "      toxic  ...                                     clean_comments\n",
+              "1666      1  ...                  Mine dispeared, somebody wax ass.\n",
+              "1667      0  ...  \" Eventually, I foresee ACORN's self serving, ...\n",
+              "1668      0  ...                         Good job... wackamole time\n",
+              "1669      1  ...  stop leaving stupid harping messages peopel ni...\n",
+              "1670      0  ...  If doubt verifiable, read enough ED. It would ...\n",
               "\n",
               "[5 rows x 7 columns]"
             ]
@@ -395,7 +395,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 16
         }
       ]
     },
@@ -775,7 +775,7 @@
       "source": [
         "We will start with simple wordclouds to get us familiar with the comments posted on the Wikipedia pages. \n",
         "\n",
-        "**The dataset contains text that may be considered profane, vulgar, or offensive.**"
+        "**The dataset contains text that may be considered profane, vulgar, or offensive. We are really sorry for that.**"
       ]
     },
     {
@@ -903,7 +903,9 @@
       "source": [
         "Even though we removed some of the most insulting phrases, we still see that those comments were severly vulgar and insulting.\n",
         " \n",
-        "They are targeting few groups - Homosexuals, Afroamericans, Mexicans and Jews. We have never suspected that Wikipedia's pages would be that vulgar."
+        "They are targeting few groups - Homosexuals, Afroamericans, Mexicans and Jews.\n",
+        "\n",
+        "We would have never suspected that Wikipedia's pages could be so vulgar."
       ]
     },
     {
@@ -1095,7 +1097,7 @@
         "colab_type": "text"
       },
       "source": [
-        "We can see that those comments focuses on insulting others and in particular few, mentioned before groups. However, just displaying most important words in each topic does not give us any additional intel so we will try visualizing those topics."
+        "We can see that those comments focus on insulting others and in particular few, groups mentioned before. However, just displaying most important words in each topic does not give us any additional intel so we will try visualizing those topics."
       ]
     },
     {
@@ -1167,7 +1169,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Graph below alows us to better understand topics in our corpus"
+        "Graph below alows us to better understand topics in our corpus.\n",
+        "\n",
+        "Unfortunately, the graph is only available in the jupyter or colab when you run the code. It cannot be seen is plain html.\n"
       ]
     },
     {
@@ -1306,7 +1310,7 @@
         "compval1 = np.array(compval1)\n",
         "train['vader'] = compval1\n",
         "\n",
-        "train.to_csv('drive/My Drive/Toxic_Comments/train_vader.csv', sep='\\t', encoding='utf-8')"
+        "train.to_csv('drive/My Drive/Toxic_Comments/data/train_vader.csv', sep='\\t', encoding='utf-8')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1329,7 +1333,7 @@
         "colab": {}
       },
       "source": [
-        "train_vader = pd.read_csv('drive/My Drive/Toxic_Comments/train_vader.csv', sep='\\t')"
+        "train_vader = pd.read_csv('drive/My Drive/Toxic_Comments/data/train_vader.csv', sep='\\t')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1844,7 +1848,7 @@
         "Documentation of those embeddings:\n",
         "https://github.com/stanfordnlp/GloVe\n",
         "\n",
-        "Cell below downloading them and preparing for usage in our classifier."
+        "Cell below downloads them and prepares for usage in our classifier."
       ]
     },
     {
@@ -2292,7 +2296,7 @@
         "colab_type": "text"
       },
       "source": [
-        "![alt text](https://drive.google.com/uc?id=1s8Uak7l8KavLWdfqNoVwntNQNFofwlyv)\n"
+        "![Screenshot of Embedding Projector](https://drive.google.com/uc?id=1s8Uak7l8KavLWdfqNoVwntNQNFofwlyv)\n"
       ]
     },
     {
@@ -2410,7 +2414,7 @@
       "source": [
         "In this research we analyzed toxic comments from Wikipedia's pages. We have never expected them to be that brutally vulgar and insulting, actually we have never experienced that much hatred in one place/page anywhere else.\n",
         "\n",
-        "We hope that this research might be helpfull in detecting toxic comments and will improve the quality of content posted by people around the world."
+        "We hope that this research might be helpful in detecting toxic comments and will improve the quality of content posted by people around the world."
       ]
     },
     {
